# nargil2

./: .gitignore  Ali.clang-format  CMakeLists.txt  CMakeLists.txt.linux  CMakeLists.txt.mac  README.md  lib_headers.hpp  main.cpp
docs/: Diffusion_doc.hpp  SWE_doc
docs/Doxygen/: Doxyfile  Summary.odt
include/: doxygen_mainpage.hpp
include/bases/: bases.hpp
include/elements/: cell.hpp  diffusion.hpp  reactive_interface.hpp
include/mesh/: mesh_handler.hpp
include/misc/: utils.hpp
include/models/: dof_counter.hpp  dof_numbering.hpp  hybridized_DG.hpp  model.hpp  model_manager.hpp  model_options.hpp
include/ode_solvers/: ode_solver.hpp
include/solvers/: solvers.hpp
solved_problems/: CMakeLists.txt
solved_problems/Doxygen/: Doxyfile
solved_problems/diffusion/: problem1.hpp  problem2.hpp
solved_problems/problems/diffusion/: #tokamak_anisotropy_2.hpp#  double_x_2d.hpp  problem1.hpp  problem2.hpp  problem3.hpp  problem_3.nb  test_problem1.hpp  test_problem1.hpp.orig  tokamak_anisotropy.hpp  tokamak_anisotropy_2.hpp  tokamak_anisotropy_2.hpp.orig
solved_problems/problems/reactive_interface/: Mike_1D_5_3_1_1.hpp  cform.py  file1.txt  file1_mod.txt  problem1.hpp  problem1.nb  problem1_dyna.hpp  problem1_dyna_2.hpp  problem1_dyna_3.hpp  problem1_jacobian_test.hpp  problem1_serial.hpp
solved_problems/problems/wave_problem/: Advec_Example1.nb  Group_Vel_Celerity.nb  Inout_BC.nb  NSWE_Eigs.nb  NSWE_Eigs_With_dim.nb  ch2_eqs.nb  ch5_GN_dispersive.nb
solved_problems/reactive_interface/: problem1.nb
source/: CMakeLists.txt
source/bases/: CMakeLists.txt  bases.cpp
source/elements/: CMakeLists.txt  cell.cpp  diffusion.cpp  reactive_interface.cpp
source/mesh/: CMakeLists.txt  mesh_handler.cpp
source/misc/: CMakeLists.txt  utils.cpp
source/models/: CMakeLists.txt  dof_counter.cpp  dof_numbering.cpp  hybridized_DG.cpp  model.cpp  model_manager.cpp
source/ode_solvers/: ode_solvers.cpp
source/solvers/: CMakeLists.txt  solvers.cpp
src/: lib_headers.hpp  main.cpp
src/elements/: CMakeLists.txt  cell_class.cpp  cell_class.hpp
src/models/: CMakeLists.txt  generic_model.cpp  generic_model.hpp
src/models/hybridized_models/: implicit_numbering.cpp  implicit_numbering.hpp
src/solution_managers/: CMakeLists.txt  generic_solution.cpp  generic_solution.hpp
